dataset1235/2025-2/610742602/users/1980422981/executions/2563853024_2935826613.log
== RUN (2025-09-02 20:24:45)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:38:35)
-- CODE: 
celsius = (input("digite o valor"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:39:25)
-- CODE: 
celsius = (input("digite o valor"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:23:44)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:03)
-- CODE: 
celsius = (input(print))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:42)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:42)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-02 20:24:44)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:37:51)
-- CODE: 
celsius = (input("digite o valor"))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:43)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    fahrenheit = (9/5) * celsius + 32
                 ~~~~~~^~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:00)
-- CODE: 
celsius = (input(print))
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 20:24:21)
-- CODE: 
celsius = (input())
fahrenheit = (9/5) * celsius + 32
print(round(fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
File "XXXX", line 3
    print(round(fahrenheit,2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
